Added some text.  I apologize for the use of the letter 'L' so often.

--- a/sample_manuscript.tex
+++ b/sample_manuscript.tex
@@ -10,7 +10,9 @@
 \begin{document}
 \maketitle
 %\begin{abstract}
-This is a potential new way of working on a document together.
+This is a potential new way of working on a document together.  It
+will be especially helpful now that Chad understands how to fetch and
+push without doing a pull request every time.  
 %\end{abstract}
 
 Here is a sample of a \LaTeX{} document, edited collaboratively on github.
